--- a/experiments/gui/Cargo.toml
+++ b/experiments/gui/Cargo.toml
@@ -8,6 +8,7 @@ rust-version = "1.58"
 
 [dependencies]
 alvr_common = { path = "../../alvr/common" }
+alvr_events = { path = "../../alvr/events" }
 alvr_session = { path = "../../alvr/session" }
 alvr_sockets = { path = "../../alvr/sockets" }
 
