--- a/experiments/launcher/Cargo.toml
+++ b/experiments/launcher/Cargo.toml
@@ -9,13 +9,16 @@ rust-version = "1.58"
 [dependencies]
 alvr_commands = { path = "../../alvr/commands" }
 alvr_common = { path = "../../alvr/common" }
+alvr_events = { path = "../../alvr/events" }
 alvr_filesystem = { path = "../../alvr/filesystem" }
 alvr_gui = { path = "../gui" }
 alvr_server_data = { path = "../../alvr/server_data" }
 alvr_session = { path = "../../alvr/session" }
 alvr_sockets = { path = "../../alvr/sockets" }
 
-iced = { git = "https://github.com/iced-rs/iced", features = ["image"] }
+chrono = "0.4"
+fern = "0.6"
+iced = { git = "https://github.com/iced-rs/iced" }
 iced_native = { git = "https://github.com/iced-rs/iced" }
 pollster = "0.2"
 serde_json = "1"
