--- a/.github/workflows/prepare-release.yml
+++ b/.github/workflows/prepare-release.yml
@@ -116,7 +116,7 @@ jobs:
           asset_content_type: application/zip
 
   build_linux_server_portable:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-21-10-server
     needs: [prepare_release]
     steps:
       - name: Checkout code
@@ -156,7 +156,7 @@ jobs:
           asset_content_type: application/zip
 
   build_linux_server:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-21-10-server
     needs: [prepare_release]
     steps:
       - name: Checkout code
