--- a/.github/workflows/prettier.yml
+++ b/.github/workflows/prettier.yml
@@ -8,7 +8,7 @@ on:
 
 jobs:
   prettier:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-21-10-server
     steps:
       - uses: actions/checkout@v2
       - uses: actionsx/prettier@v2
