--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -29,7 +29,7 @@ jobs:
           args: -p alvr_xtask -p alvr_server -p alvr_launcher --verbose
 
   build_linux:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-21-10-server
     steps:
       - uses: actions/checkout@v2
       - uses: actions-rs/toolchain@v1
@@ -55,7 +55,7 @@ jobs:
           args: -p alvr_xtask -p alvr_launcher -p alvr_server -p alvr_vulkan-layer -p vrcompositor-wrapper --verbose
 
   tests:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-21-10-server
     steps:
       - uses: actions/checkout@v2
       - uses: actions-rs/toolchain@v1
@@ -71,7 +71,7 @@ jobs:
           args: -p alvr_session --verbose
 
   rustfmt:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-21-10-server
     steps:
       - uses: actions/checkout@v2
       - uses: actions-rs/toolchain@v1
