--- a/.github/workflows/prepare-release.yml
+++ b/.github/workflows/prepare-release.yml
@@ -13,7 +13,7 @@ on:
 
 jobs:
   prepare_release:
-    runs-on: windows-2019
+    runs-on: ubuntu-latest
     outputs:
       release_ref: ${{ steps.output_ref.outputs.release_ref }}
       upload_url: ${{ steps.create_release.outputs.upload_url }}
@@ -27,9 +27,7 @@ jobs:
       - name: Bump version
         id: bump_version
         run: |
-          $versionarg = "${{ github.event.inputs.version }}"
-          $versionarg = If ($versionarg.Length -gt 0) { "--version $versionarg" } else { "" }
-          echo "::set-output name=version_tag::$versionarg"
+          echo "::set-output name=version_tag::${{ github.event.inputs.version }}"
 
       - name: Output ref for later checkouts
         id: output_ref
