--- a/.github/workflows/sync-fork.yml
+++ b/.github/workflows/sync-fork.yml
@@ -13,5 +13,5 @@ jobs:
     steps:
       - uses: tgymnich/fork-sync@v1.8
         with:
-          base: phonevr
+          base: master
           head: master
